nerve/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nerve-service
  namespace: nerve
  labels:
    app: nerve
spec:
  selector:
    app: nerve
  ports:
    - name: http
      port: 80
      targetPort: 8900
