nerve/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: nerve
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nerve-ingress
  namespace: nerve
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: nerve-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - secretName: nerve-cert
  rules:
    - host: nerve.sachiniyer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nerve-service
                port:
                  number: 80
